# free-sales-forecast

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  datasets.py  forecast.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  records.py
backend/app/schemas/: __init__.py  datasets.py  forecast.py
backend/app/services/: __init__.py  datasets.py  forecast.py  parameters.py  repository.py  tasks.py
backend/app/storage/: __init__.py  minio_store.py
backend/tests/: conftest.py  test_platform_integrations.py
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-entrypoint.frontend.sh
deploy/k8s/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.example.yaml  worker.yaml
frontend/: Caddyfile  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/data/: sample_sales.csv
frontend/public/: config.js
frontend/src/: LanguageSwitcher.jsx  main.jsx
frontend/src/i18n/: index.js
frontend/src/i18n/locales/: en-US.js  zh-CN.js
scripts/: ui_smoke_test.mjs
worker/: pyproject.toml
worker/app/: __init__.py  dramatiq_app.py  settings.py  tasks.py
worker/app/runners/: __init__.py  base.py
