# SPDX-FileCopyrightText: 2026 Free Sales Forecast contributors
# SPDX-License-Identifier: MIT
[project]
name = "free-sales-forecast-backend"
version = "0.1.0"
description = "FastAPI backend for Free sales forecasting experiments"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "dramatiq[redis]>=2.0.0",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "minio>=7.2.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
