# SPDX-FileCopyrightText: 2026 Free Sales Forecast contributors
# SPDX-License-Identifier: MIT
[project]
name = "free-sales-forecast-worker"
version = "0.1.0"
description = "Dramatiq worker for Free sales forecast model training"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "dramatiq[redis]>=2.0.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
]

[tool.ruff]
line-length = 100
